Joining Vertices Crashes Blender #45582

Closed
opened 2015-07-27 23:12:32 +02:00 by Liam · 5 comments

System Information
Windows 7 Ultimate
MSI GeForce GTX 960

Blender Version
Blender 2.75a

Short description of error
When joining two connecting vertices by pressing 'j' or mesh > vertices > connect vertex path, it instantly causes blender to lock up, forcing me to close it with task manager.

Exact steps for others to reproduce the error
Open .blend file, press j

v1.blend

**System Information** Windows 7 Ultimate MSI GeForce GTX 960 **Blender Version** Blender 2.75a **Short description of error** When joining two connecting vertices by pressing 'j' or mesh > vertices > connect vertex path, it instantly causes blender to lock up, forcing me to close it with task manager. **Exact steps for others to reproduce the error** Open .blend file, press j [v1.blend](https://archive.blender.org/developer/F213514/v1.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Segatapes

Added subscriber: @Segatapes
Campbell Barton self-assigned this 2015-07-28 02:48:27 +02:00

This is really bad of course, Blender should never hang like this.

Note that I investigated this and have a partial solution but would like to check further before committing a fix.

This is really bad of course, Blender should never hang like this. Note that I investigated this and have a partial solution but would like to check further before committing a fix.

This issue was referenced by e31f8e756f

This issue was referenced by e31f8e756f304a146525550bc7216927b1029211

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45582
No description provided.